cleaned up POM files